[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.io"
license = "Unlicense"
name = "frontier-template-node"
publish = false
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
version = "0.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
jsonrpc-pubsub = "18.0.0"
log = "0.4.8"
structopt = "0.3.8"

sc-cli = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"]}
sc-client-api = {git = "https://github.com/paritytech/substrate"}
sc-consensus = {git = "https://github.com/paritytech/substrate"}
sc-consensus-aura = {git = "https://github.com/paritytech/substrate"}
sc-consensus-manual-seal = {git = "https://github.com/paritytech/substrate"}
sc-executor = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"]}
sc-finality-grandpa = {git = "https://github.com/paritytech/substrate"}
sc-keystore = {git = "https://github.com/paritytech/substrate"}
sc-network = {git = "https://github.com/paritytech/substrate"}
sc-service = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"]}
sc-telemetry = {git = "https://github.com/paritytech/substrate"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate"}
sp-consensus = {git = "https://github.com/paritytech/substrate"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate"}
sp-core = {git = "https://github.com/paritytech/substrate"}
sp-finality-grandpa = {git = "https://github.com/paritytech/substrate"}
sp-inherents = {git = "https://github.com/paritytech/substrate"}
sp-runtime = {git = "https://github.com/paritytech/substrate"}
sp-timestamp = {git = "https://github.com/paritytech/substrate"}

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate"}
sc-rpc = {git = "https://github.com/paritytech/substrate"}
sc-rpc-api = {git = "https://github.com/paritytech/substrate"}
sp-api = {git = "https://github.com/paritytech/substrate"}
sp-block-builder = {git = "https://github.com/paritytech/substrate"}
sp-blockchain = {git = "https://github.com/paritytech/substrate"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = {git = "https://github.com/paritytech/substrate"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate"}

fc-consensus = {git = "https://github.com/paritytech/frontier"}
fc-db = {git = "https://github.com/paritytech/frontier"}
fc-mapping-sync = {git = "https://github.com/paritytech/frontier"}
fc-rpc = {git = "https://github.com/paritytech/frontier"}
fc-rpc-core = {git = "https://github.com/paritytech/frontier"}
fp-consensus = {git = "https://github.com/paritytech/frontier"}
fp-rpc = {git = "https://github.com/paritytech/frontier"}
frontier-template-runtime = {git = "https://github.com/paritytech/frontier", default-features = false, features = ["std"]}

pallet-base-fee = {git = "https://github.com/paritytech/frontier"}
pallet-dynamic-fee = {git = "https://github.com/paritytech/frontier"}
pallet-ethereum = {git = "https://github.com/paritytech/frontier"}
pallet-evm = {git = "https://github.com/paritytech/frontier"}

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate"}

[features]
aura = ["frontier-template-runtime/aura"]
default = ["aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
runtime-benchmarks = [
  "frontier-template-runtime/runtime-benchmarks",
]
